--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,75 +2,64 @@
 export interface Props {
 	title: string;
 	body: string;
-	href: string;
+	website?: string;
+	phone?: string;
+	email?: string;
 }
 
-const { href, title, body } = Astro.props;
+const { website, phone, email, title, body }: Props = Astro.props;
+
+// remove last Slash form String
+const optimizeUrlForView = (string: string) => {
+	string = string.replace("https://", "").replace("http://", "");
+
+	if (string.endsWith("/")) {
+		return string.slice(0, -1);
+	}
+	return string;
+};
+
+const contactChannels = [
+	{
+		// remove last slash "/" from string
+		label: optimizeUrlForView(website as string),
+		link: website ? website : null,
+	},
+	{
+		label: email,
+		link: email ? `mailto:${email}` : null,
+	},
+	{
+		label: phone,
+		link: phone ? `tel:${phone}` : null,
+	},
+].filter((channel) => channel.link);
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
+<li
+	class='text-white pl-6 py-2 hover:bg-white/10 transition-all duration-500 border-l-8 border-white flex flex-col justify-between'
+>
+	<h2 class='uppercase font-bold tracking-wider text-lg lg:text-xl'>
+		{title}
+	</h2>
+	<div class='text-base lg:text-lg flex flex-col justify-between h-full'>
+		<p class='mt-3 opacity-80'>
 			{body}
 		</p>
-	</a>
+		<div class='mt-3 opacity-80 mb-2 flex'>
+			{
+				contactChannels.map((channel) => (
+					<div class="before:ml-3 before:mr-2 before:content-['·'] first-of-type:before:content-none">
+						<a
+							class='underline underline-offset-4'
+							href={channel.link}
+							rel='noopener noreferrer'
+						>
+							{channel.label}
+						</a>
+					</div>
+				))
+			}
+		</div>
+	</div>
 </li>
-<style>
-	:root {
-		--link-gradient: linear-gradient(45deg, #4f39fa, #da62c4 30%, var(--color-border) 60%);
-	}
-
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.15rem;
-		background-image: var(--link-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-	}
-
-	h2 {
-		margin: 0;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	p {
-		margin-top: 0.75rem;
-		margin-bottom: 0;
-	}
-
-	h2 span {
-		display: inline-block;
-		transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #4f39fa;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 span {
-		will-change: transform;
-		transform: translateX(2px);
-	}
-</style>
