--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Cards from "../components/Cards.astro";
 
 <Layout title='Welcome to Astro.'>
 	<Header />
-	<main class='max-w-screen-lg mx-auto'>
+	<main class='max-w-screen-lg mx-auto px-4 md:px-8 xl:px-0'>
 		<h1 class='sr-only'>Alte Druckerei</h1>
 
 		<Cards title='2. OG'>
@@ -19,17 +19,27 @@ import Cards from "../components/Cards.astro";
 				email='hallo@stephaniedierolf.de'
 			/>
 			<Card
-				website='https://astro.build/integrations/'
-				title='Integrations'
-				body='Supercharge your project with new frameworks and libraries.'
+				title='Atelier Masala (Vincent Beck)'
+				body='Selbständiger Illustrator und Grafikdesigner'
+				email='contact@atelier-masala.com'
+				website='https://atelier-masala.com/'
+				phone='01578 0843418'
 			/>
 			<Card
-				website='https://astro.build/themes/'
-				title='Themes'
-				body='Explore a galaxy of community-built starter themes.'
+				website='https://mariohamann.de/'
+				title='Media and Music (Mario Hamann)'
+				body='Webdesign und -entwicklung, Musikproduktion'
+				email='mail@mariohamann.de'
+				phone='0162 2050306'
+			/>
+			<Card
+				website='untris.net'
+				title='Untris (Consuelo Rozo)'
+				body='Mediengestalterin, Kunst & Kulturelle Projekte, Transkulturelle Kommunikation'
+				email='consuelo@untris.net'
+				phone='01575 4206229'
 			/>
 		</Cards>
-
 		<Cards title='1. OG'>
 			<Card
 				website='https://docs.astro.build/'
