--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,44 +22,53 @@ const optimizeUrlForView = (string: string) => {
 const contactChannels = [
 	{
 		// remove last slash "/" from string
-		label: optimizeUrlForView(website as string),
+		label: "Web",
 		link: website ? website : null,
 	},
 	{
-		label: email,
+		label: "Mail",
 		link: email ? `mailto:${email}` : null,
 	},
 	{
-		label: phone,
+		label: "Phone",
 		link: phone ? `tel:${phone}` : null,
 	},
 ].filter((channel) => channel.link);
 ---
 
 <li
-	class='text-white pl-6 py-2 hover:bg-white/10 transition-all duration-500 border-l-8 border-white flex flex-col justify-between'
+  x-data="{ shown: false }" x-intersect="shown = true"
 >
-	<h2 class='uppercase font-bold tracking-wider text-lg lg:text-xl'>
+  <div 
+  x-show="shown"
+  x-transition:enter="transition ease-out duration-1000"
+  x-transition:enter-start="opacity-0"
+  x-transition:enter-end="opacity-100"
+	class='bg-white/5 text-white pl-6 h-full py-6 duration-300 border-l-8 group p-8 border-white/10 hover:border-yellow-400 flex flex-col justify-between'>
+	<h2 class='font-bold tracking-wider text-lg lg:text-xl'>
 		{title}
 	</h2>
 	<div class='text-base lg:text-lg flex flex-col justify-between h-full'>
 		<p class='mt-3 opacity-80'>
 			{body}
 		</p>
-		<div class='mt-3 opacity-80 mb-2 flex'>
+		<div
+			class='mt-8 opacity-80 mb-2 flex'
+		>
 			{
 				contactChannels.map((channel) => (
-					<div class="before:ml-3 before:mr-2 before:content-['·'] first-of-type:before:content-none">
-						<a
-							class='underline underline-offset-4'
-							href={channel.link}
-							rel='noopener noreferrer'
-						>
-							{channel.label}
-						</a>
-					</div>
+				<div class='before:ml-3 before:mr-2 before:content-["·"] first-of-type:before:content-none'>	
+        <a
+						class='transition-all underline underline-offset-4 decoration-4 uppercase decoration-transparent hover:decoration-yellow-400 delay-50  text-sm tracking-wide'
+						href={channel.link}
+						rel='noopener noreferrer'
+					>
+						{channel.label}
+					</a>
+          </div>
 				))
 			}
 		</div>
 	</div>
+  </div>
 </li>
