--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,10 @@ const { title } = Astro.props;
 		<!-- Alpine Plugins -->
 		<script
 			defer
+			src='https://unpkg.com/@alpinejs/focus@3.x.x/dist/cdn.min.js'
+		></script>
+		<script
+			defer
 			src='https://unpkg.com/@alpinejs/intersect@3.x.x/dist/cdn.min.js'
 		></script>
 
