--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -36,18 +36,21 @@ const contactChannels = [
 ].filter((channel) => channel.link);
 ---
 
+<!-- The following <li> has to be focusable -->
 <li
   tabindex="0"
   class="outline-none"
-  x-data="{ shown: false }" x-intersect="shown = true"
+  x-data="{ shown: false }"
+  x-intersect="shown = true;"
   x-on:focus="shown = true; $nextTick(() => $focus.first());"
+  x-init="$watch('shown', () => $el.removeAttribute('tabindex'));"
 >
   <div 
   x-show="shown"
-  x-transition:enter="transition ease-out duration-1000"
+  x-transition:enter="ease-out duration-1000 delay-300"
   x-transition:enter-start="opacity-0"
-  x-transition:enter-end="opacity-100"
-	class='bg-white/5 text-white pl-6 h-full py-6 duration-300 border-l-8 group p-8 border-white/10 hover:border-yellow-400 focus-within:border-yellow-400 flex flex-col justify-between'>
+  x-transition:enter-end="opacity-100 duration-500"
+	class='transition-all bg-white/5 text-white pl-6 h-full py-6 border-l-8 group p-8 border-white/10 hover:border-yellow-400 focus-within:border-yellow-400 flex flex-col justify-between'>
 	<h2 class='font-bold tracking-wider text-lg lg:text-xl'>
 		{title}
 	</h2>
